# sdone

./: .gitignore  .impeccable.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  README.md
backend/: .env.example  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/alembic/: env.py
backend/alembic/versions/: cbf3ab185186_init.py
backend/app/: main.py  templating.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: base.py  session.py
backend/app/routers/: pages.py
backend/app/static/css/: input.css
backend/app/templates/: base.html
backend/app/templates/pages/: today.html
backend/tests/: conftest.py  test_health.py  test_pages.py  test_settings.py
mockups/002-app-shell/: 01-sidebar-cool-slate.html  02-topnav-cool-slate.html  03-sidebar-paper-terracotta.html  index.html
specs/: 001-scaffolding-backend.md  002-app-shell-visual-mockup.md  003-interstitial-journal.md  004-app-shell-implementation.md  TEMPLATE design.md  TEMPLATE.md
